--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,9 @@
   border-left: 0.3em solid transparent;
   margin-left: 0.2em;
 }
+.navbarid{
+  background-color: white !important;
+}
 .nav-item{
   margin-right: 8px;
 }
@@ -37,7 +40,7 @@
 }
 .drop-down-menu{
   position: absolute;
-  margin-top: 10px;
+  margin-top: 13px;
   background-color: var(--primary);
   height: auto;
   min-width: 15rem;
