--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,51 @@ background-color: var(--hovercolor) !important;
 ::-webkit-scrollbar-thumb:hover {
   background: var(--primary);
 } 
+
+
+.call-back-form .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
+background-color: #3b3b3bd2 !important;
+border-radius: 5px;
+color: white !important;
+
+}
+.call-back-form .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input:focus{
+  border-color: #01ABC8 !important;
+}
+.call-back-form .css-z1o969-MuiInputBase-root-MuiOutlinedInput-root:focus{
+  border-color: #01ABC8 !important;
+}
+.call-back-form .css-z1o969-MuiInputBase-root-MuiOutlinedInput-root:active{
+  border-color: #01ABC8 !important;
+}
+.call-back-form .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input:active{
+  border-color: #01ABC8 !important;
+}
+.call-back-form .css-md26zr-MuiInputBase-root-MuiOutlinedInput-root.Mui-error .MuiOutlinedInput-notchedOutline {
+border-color: #01ABC8 !important;
+}
+.call-back-form .css-1pysi21-MuiFormLabel-root-MuiInputLabel-root.Mui-error {
+color: white !important;
+}
+.call-back-form .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root {
+  color: white !important;
+}
+.call-back-form .css-k4qjio-MuiFormHelperText-root.Mui-error {
+color: #01ABC8 !important;
+
+}
+.call-back-form .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
+color: white !important;
+}
+.call-back-form .css-z1o969-MuiInputBase-root-MuiOutlinedInput-root {
+border: 1px #01ABC8 !important;
+background-color: #373838 !important;
+color: white !important;
+}
+.call-back-form .css-z1o969-MuiInputBase-root-MuiOutlinedInput-root.Mui-error {
+  outline: #01ABC8 !important;
+}
+.call-back-form .css-12tl3rr-MuiInputBase-input-MuiOutlinedInput-input:focus {
+outline: #01ABC8 !important;
+border-color: #01ABC8 !important;
+}
